--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Positioning assignment-2</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+<body>
+    <header></header>
+</body>
+</html>
 <!-- ### Exercise
 
 1. Create a simple page having a header, main content, and a footer.
