Completed assignment-2 in Positions

--- a/block-BHaabd/index.html
+++ b/block-BHaabd/index.html
@@ -1,3 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Positions Assignment-1</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+<body>
+    <header>
+        <section>
+            <div>
+                <h1>Extracts from "Our Cats, by Harrison Weir"</h1>
+            </div>
+        </section>
+    </header>
+    <main >
+        <aside class="container">
+            <div class="clearfix"> 
+                <h2>Usefulness of cats<h2></h2>
+            <article class="col column-1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ut reiciendis reprehenderit rerum, repudiandae temporibus dignissimos ullam sint consequatur quod aliquam, debitis accusamus iste facilis odit excepturi doloribus quos nostrum?</p>
+            </article>
+            <article class="col column-2">
+                
+                <img src="393963.jpg" alt="Scenery
+                ">
+                <p>edrtdrtdtydtfytfs Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quibusdam libero rerum temporibus, aspernatur quas fugit. Iste, rem, dicta dolores quos nesciunt atque nihil et voluptas eaque ratione sapiente asperiores!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, magni! Error natus debitis, dolores quas laboriosam dignissimos delectus praesentium, aliquam quis suscipit excepturi soluta maiores, tenetur et! Explicabo, ad excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus quas repudiandae non, ea quaerat possimus saepe praesentium! Autem eius rem facere maxime dolorem asperiores mollitia dolore est eaque voluptatibus?lore</p>
+                <p class="pad">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam molestiae assumenda, ex sunt dolor aperiam sit accusantium? Delectus, vero ratione. Qui dignissimos ratione dolor optio ut vero incidunt corporis tempora.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi saepe optio inventore pariatur, voluptatum autem eos officiis laborum. Porro mollitia fugit culpa neque aliquam. Officiis unde nisi quod fugiat cum.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo a officia corporis tempore esse! Velit provident perspiciatis, animi soluta, quidem veritatis assumenda laboriosam porro maiores odio praesentium debitis illo eos.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates nihil dolor repudiandae adipisci. Porro eaque optio alias assumenda sint cupiditate quaerat, dolores, mollitia pariatur ut veniam eius recusandae deleniti consequatur!Loremlorem
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum fuga modi voluptatibus, aliquam p
+                </p>
+            </article>
+            <article class="col column-3">
+                <p>Usefulness of cats Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis repudiandae numquam sed impedit cum repellendus cupiditate quis itaque, voluptates enim laboriosam alias ex iste debitis nesciunt, possimus aspernatur a perspiciatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda maxime quos laboriosam eveniet fuga repudiandae harum ab, nobis alias, explicabo ullam. Fugiat, esse consequuntur. Consectetur dolor reiciendis tenetur id nobis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, aliquam ipsum. Id a qui possimus iste enim cupiditate nostrum minima magni nesciunt ex culpa quidem officiis, cumque quaerat. Consequuntur, fugit.</p>
+            </article>
+            </div>
+            
+        </aside>
+    </main>
+    <footer>
+        <p>  </p>
+    </footer>
+</body>
+</html>
 <!-- 
 ### Create a page according to the layout shown below
 
