--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -6,9 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Positioning assignment-2</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header class="clearfix">
+        <div class="logo">
+            <img src="tata_motors_logo.png" alt="Logo">
+        </div>
+        <nav class="nav">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Service</a>
+            <a href="#">Careers</a>
+        </nav>
+    </header>
+    <main id="top">
+        <article class="clearfix">
+            <section class="para">
+                <h1>The article section</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis voluptatem odio quaerat vel quas at illo tempore similique corrupti aperiam consequuntur eaque qui quibusdam, dolores culpa, nobis et temporibus deserunt!</p>
+            </section>
+            <div class="colimg">
+                <img src="pic03.png" alt="pic1">
+            </div>
+            <aside>
+                <section class="clearfix">
+                    <div class="image1">
+                    <img src="download (1).jpeg" alt="pics">
+                    </div>
+                    <div class="image1">
+                    <img src="download.jpeg" alt="pics">
+                    </div>
+                    <div class="image1">
+                    <img src="images.jpeg" alt="pics">
+                    </div>
+                </section>
+                <section class="clearfix">
+                    <div class="image1">
+                    <img src="pic02.png" alt="pics">
+                    </div>
+                    <div class="image1">
+                    <img src="pic01.png" alt="pics">
+                    </div>
+                    <div class="image1">
+                    <img src="pic03.png" alt="pics">
+                    </div>
+                </section>
+            </aside>
+        </article>
+    </main>
+    <footer>
+        <nav>
+            <p>click the Blue Circular button to go to top of the page</p>
+            <a href="#top"><p class="button"></p></a>
+        </nav>
+    </footer>
+
+
 </body>
 </html>
 <!-- ### Exercise
